--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,2 +1,4 @@
+<td><%= user.api_user_id %></td>
+<td><%= user.client %></td>
 <td><%= link_to user.name, user %></td>
 <td><%= link_to user.email, user %></td>
