--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,14 @@
     <h3>Users</h3>
     <div class="column">
       <table class="table">
+        <thead>
+          <tr>
+            <th>User ID</th>
+            <th>Client</th>
+            <th>Name</th>
+            <th>Email</th>
+          </tr>
+        </thead>
         <tbody>
           <% @users.each do |user| %>
             <tr>
