--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,12 @@
     <h3>Sign up</h3>
     <%= devise_error_messages! %>
     <div class="form-group">
+      <%= f.label :client %>
+      <%= f.text_field :client, :autofocus => true, class: 'form-control' %>
+    </div>
+    <div class="form-group">
       <%= f.label :name %>
-      <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
