--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,10 +5,12 @@
       <table class="table">
         <thead>
           <tr>
-            <th>User ID</th>
             <th>Client</th>
             <th>Name</th>
             <th>Email</th>
+            <th>Contact #</th>
+            <th>Groups</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
