--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <h3>Sign up</h3>
     <%= devise_error_messages! %>
     <div class="form-group">
-      <%= f.label :client %>
+      <%= f.label :client, 'Database' %>
       <%= f.text_field :client, :autofocus => true, class: 'form-control' %>
     </div>
     <div class="form-group">
