--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,13 @@
 <div class="container">
   <div class="row">
-    <h3>Users</h3>
+    <h3>Users for <%= current_user.client %></h3>
     <div class="column">
       <table class="table">
         <thead>
           <tr>
-            <th>Client</th>
             <th>Name</th>
             <th>Email</th>
-            <th>Contact #</th>
+            <th>Phone</th>
             <th>Groups</th>
             <th></th>
           </tr>
