--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,41 @@
-edit user!
+<div class=authform>
+  <h3>Edit User Details and Group Memberships</h3>
+  <%= form_for(@user, html: { class: 'user-form' }) do |f| %>
+    <%# devise_error_messages! %>
+    <div class=form-group>
+      <%= f.label :database %>
+      <div><%= @user.client %></div>
+    </div>
+    <div class=form-group>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+    <div class=form-group>
+      <%= f.label :email %>
+      <%= f.email_field :email, autocapitalize: 'off', class: 'form-control' %>
+    </div>
+    <div class=form-group>
+      <%= f.label :phone, 'Contact Number' %>
+      <%= f.phone_field :phone, class: 'form-control' %>
+    </div>
+    <div class=form-group>
+      <%= f.label :password %>
+      <%= f.password_field :password, placeholder: 'Leave blank for unchanged', class: 'form-control' %>
+    </div>
+    <div class=form-group>
+      <label for='user[group_ids][]'>Groups</label><span class=small> (multi-select)</span>
+      <select class='form-control multi-select' id=user_group_ids
+              style='height: 20em'
+              name='user[group_ids][]' multiple=true data-placeholder="Choose one or more groups...">
+        <% @groups.each do |group| -%>
+          <option value='<%= group.id %>' <%= 'selected' if @user_groups.include?(group) %>>
+          <%= group.name %>
+          </option>
+        <% end -%>
+      </select>
+    </div>
+    <div class=form-group>
+      <%= f.submit @user.new_record? ? 'Create' : 'Update', class: 'button btn' %>
+    </div>
+  <% end %>
+</div>
