Remove LM links on welcome page

--- a/apps/simple-auth/app/views/users/welcome.html.erb
+++ b/apps/simple-auth/app/views/users/welcome.html.erb
@@ -12,10 +12,9 @@
   })();
 </script>
 
-<h3>LightMesh</h3>
+<h3>Application</h3>
 
-<h4><a href='/'>Search and Admin Interface</a></h4>
-<h4><a href='/ipam'>IPAM</a></h4>
+<h4><a href='/'>Home</a></h4>
 
 <hr>
 <h3>User Management</h3>
