--- a/apps/simple-auth/app/views/users/welcome.html.erb
+++ b/apps/simple-auth/app/views/users/welcome.html.erb
@@ -14,7 +14,7 @@
 
 <h3>Application</h3>
 
-<h4><a href='/'>Home</a></h4>
+<h4><a href='/'>API Admin Interface</a></h4>
 
 <hr>
 <h3>User Management</h3>
