Remove references to Lightmesh

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
         </button>
         <%= link_to(root_path, class: 'navbar-brand') do %>
-          <%= image_tag "logo.png" %>
+          <%= image_tag "xnlogic-logo-site.png" %>
         <% end %>
       </div>
       <div class="collapse navbar-collapse">
