--- a/app/views/user_mailer/ldap_account_notification.html.erb
+++ b/app/views/user_mailer/ldap_account_notification.html.erb
@@ -75,7 +75,7 @@
         <tbody>
           <tr>
             <td>
-              Your Account Has Been Added To Lightmesh
+              Your Account Has Been Added
               <br />
               <br />
             </td>
