--- a/app/views/users/new_ldap.html.erb
+++ b/app/views/users/new_ldap.html.erb
@@ -71,7 +71,7 @@
             </div>
             <div class=col-xs-4>
               <div class="form-group">
-                <label>Lightmesh Email</label>
+                <label>Email</label>
                 <%= f.email_field :email, class: 'form-control' %>
                 <div class="form-errors"><%= @user.errors[:email].join(",") %></div>
               </div>
