--- a/app/views/layouts/signup.html.erb
+++ b/app/views/layouts/signup.html.erb
@@ -25,7 +25,7 @@
       <div class="container-fluid">
         <div class="row">
           <div id="login" class="col-xs-4 col-xs-offset-4">
-            <%= image_tag 'lightmesh-logo-site-x2.png' %>
+            <%= image_tag 'xnlogic-logo-site-x2.png' %>
             <%= yield %>
           </div>
         </div>
