--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
         </button>
         <%= link_to(root_path, class: 'navbar-brand') do %>
-          <%= image_tag "xnlogic-logo-site.png" %>
+          <img src="/assets/logo-25px.png" style="height: 25px; width: auto;">
         <% end %>
       </div>
       <div class="collapse navbar-collapse">
