--- a/app/views/user_mailer/sign_up_notification.html.erb
+++ b/app/views/user_mailer/sign_up_notification.html.erb
@@ -69,7 +69,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="http://app3.lightmesh.com/assets/lightmesh-logo-site-x2.png" />
+      <img src="<%= Rails.application.secrets.domain_name.to_s %>/assets/logo-site-x2.png" />
       <br/><br/>
       <table>
         <tbody>
