--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -34,6 +34,11 @@
                 <%= f.password_field :password_confirmation, class: 'form-control' %>
                 <%= @user.errors[:password_confirmation].join(",") %>
               </div>
+              <div class="form-group">
+                <%= f.label :service_account %>
+                <%= f.check_box :service_account, class: 'form-control' %>
+                <%= @user.errors[:service_account].join(",") %>
+              </div>
             </div>
             <div class=col-xs-4>
               <div class=form-group>
@@ -63,7 +68,7 @@
               <div class="btn btn-default">Cancel</div>
             </a>
           </div>
-        <div>
+        </div>
       <% end %>
     </div>
   </div>
