--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,5 @@
 <%# add navigation links to this file %>
-<li><%= link_to 'lightmesh', root_url %></li>
-<li><a href='/ipam'>ipam</a></li>
+<li><%= link_to 'home', root_url %></li>
 <li><a class="active" href="/users">users</a></li>
 <% if user_signed_in? %>
 <% else %>
